src/renderer/style.css
:root {
    --events: all;
}

body {
    display: flex;
    flex-direction: column;
    margin: 0;
    background: dimgray;
    height: 100vh;
}

.header {
    margin-left: 85px;
    height: 38px;
    display: flex;
    justify-content: space-between;
    gap: 10px;
    position: relative;
}

.tabs-container {
    display: flex;
    flex-grow: 1;
    position: relative;
    overflow-x: auto;
}

/* .header::after {
    z-index: 0;
    content: "";
    width: 100%;
    height: 100%;
    app-region: drag;
} */

.tab, .new-tab {
    z-index: 20;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 120px;
    background:silver;
    user-select: none;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
    position: relative;
    pointer-events: var(--events);
}

.no-events {
    pointer-events: none;
}

.tab:hover, .new-tab:hover {
    cursor: pointer;
    background: whitesmoke;
}

.content {
    flex-grow: 1;
    background-color: silver;
}

.url-wrapper {
    display: flex;
    align-items: center;
    height: 30px;
    background: whitesmoke;
}

.url {
    flex-grow: 1;
    margin: 8px;
    border: none;
    font-size: 18px;
    background: darkgrey;
    font-family: monospace;
}

.hidden {
    display: none;
}

.tab-splitter {
    height: 100%;
    background: red;
    width: 4px;
    margin-right: -4px;
    z-index: 40;
}

.tab-splitter-open {
    width: 120px;
}

